<?xml version="1.0" encoding="utf-8"?>
<!--
Name:          Ellen Savude Ngatia
Student ID:   S1638842
-->
<LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context=".View.MainActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_background"
    android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="30sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/splashname1"/>


        <Button
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:text="@string/earthquake"
            android:layout_weight="1"
            android:id="@+id/searchb"
            android:layout_margin="15dp"
            style="@style/AppTheme.RoundedCornerMaterialButton" />
        <Button
        android:layout_height="1dp"
        android:layout_width="match_parent"
            android:layout_weight="1"
        android:text="@string/Duration"
            android:layout_margin="15dp"
        android:id="@+id/duration"
            style="@style/AppTheme.RoundedCornerMaterialButton"/>

        <Button
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:text="@string/recent"
            android:layout_weight="1"
            android:id="@+id/recent"
            android:layout_margin="15dp"
            style="@style/AppTheme.RoundedCornerMaterialButton"/>


</LinearLayout>