<?xml version="1.0" encoding="utf-8"?>
<!--
Name:          Ellen Savude Ngatia
Student ID:   S1638842
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:minWidth="400dp"
    android:maxHeight="500dp"
    android:padding="6dp"
    android:background="@drawable/border"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/infoView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="3dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textAppearance="@style/Font"
        android:text="@string/searchtitle"
        android:gravity="center"
        android:layout_gravity="center"
        />
    <LinearLayout
        android:id="@+id/locationView"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="3dp"
        android:weightSum="2">
        <TextView
            android:id="@+id/labelLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:text="@string/locationsearch"
            android:textAppearance="@style/Font"
            android:gravity="right"/>
        <EditText
            android:id="@+id/editLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textAppearance="@style/Font"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/catView"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginLeft="3dp"
        android:layout_marginBottom="2dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2">
        <TextView
            android:id="@+id/labelCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:text="@string/categorysearch"
            android:textAppearance="@style/Font"
            android:gravity="right"/>
        <FrameLayout android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="visible">
            <Spinner
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:popupBackground="@drawable/gradient_background"
                android:popupTheme="@style/Font"
                android:id="@+id/editCat"
                android:spinnerMode="dropdown"
                />
        </FrameLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/titleView"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginLeft="3dp"
        android:layout_marginBottom="4dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2">
        <TextView
            android:id="@+id/labelTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:textAppearance="@style/Font"
            android:text="@string/titlesearch"
            android:gravity="right"/>
        <EditText
            android:id="@+id/editTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textAppearance="@style/Font"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/origDateFromView"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="3dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2">
        <TextView
            android:id="@+id/labelOrigFrom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:text="@string/fromdate"
            android:textAppearance="@style/Font"
            android:gravity="right"/>
        <EditText
            android:id="@+id/editOrigFrom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none"
            android:textAppearance="@style/Font"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/origDateToView"
        android:orientation="horizontal"
        android:layout_marginLeft="3dp"
        android:layout_width="match_parent"
        android:layout_marginBottom="4dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2">
        <TextView
            android:id="@+id/labelOrigTo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:textAppearance="@style/Font"
            android:text="@string/todate"
            android:gravity="right"/>
        <EditText
            android:id="@+id/editOrigTo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none"
            android:textAppearance="@style/Font"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/depthView"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="3dp"
        android:weightSum="2">
        <TextView
            android:id="@+id/labelDepth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:textAppearance="@style/Font"
            android:text="@string/depthsearch"
            android:gravity="right"/>
        <EditText
            android:id="@+id/editDepth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textAppearance="@style/Font"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/magView"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginLeft="3dp"
        android:layout_marginBottom="4dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2">
        <TextView
            android:id="@+id/labelMag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Font"
            android:layout_weight="0.75"
            android:text="@string/magnitudesearch"
            android:gravity="right"/>
        <EditText
            android:id="@+id/editMag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textAppearance="@style/Font"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        android:padding="2dp">
        <Button
            android:id="@+id/dialogButtonSearch"
            android:textAppearance="@style/Font"
           android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="30dp"
            android:text="@string/searchtext"
            style="@style/AppTheme.RoundedCornerMaterialButton"
            />
        <Button
            android:id="@+id/dialogButtonBack"
            android:textAppearance="@style/Font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"
            style="@style/AppTheme.RoundedCornerMaterialButton"
        />
    </LinearLayout>
</LinearLayout>